--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,8 +38,10 @@ jobs:
     - name: Run the tests and generate coverage report
       run: npm test -- --coverage
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Deploy
       run: |
