--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "rustagdle",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ilyas-assylbekov.github.io/rustagdle",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
