--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,8 +29,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-    - name: Install dependencies
-      run: npm install
+    #- name: Install dependencies
+     # run: npm install
       
     - name: Build
       run: npm run build --if-present
