--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
       run: npm ci
       
     - name: Build
-      run: npm run build --if-present
+      run: CI=false npm run build --if-present
       
     - name: Run the tests and generate coverage report
       run: npm test -- --coverage
