--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Build
       run: CI=false npm run build --if-present
       
-    - name: Run the tests and generate coverage report
-      run: npm test -- --coverage
+    #- name: Run the tests and generate coverage report
+      #run: npm test -- --coverage
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
