--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ilyas-assylbekov.github.io/rustagdle",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
   "main": "index.js",
   "dependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
@@ -27,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
